--- a/index.htm
+++ b/index.htm
@@ -6,23 +6,23 @@
     <meta name="viewport" id="metaViewport" content="user-scalable=no, initial-scale=1, width=device-width, viewport-fit=cover" data-tdv-general-scale="0.5"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <link rel="shortcut icon" href="favicon.ico?v=1625727777087">
-	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1625727777087">
-	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1625727777087">
-	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1625727777087">
-	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1625727777087">
-	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1625727777087">
-	<link rel="manifest" href="manifest.json?v=1625727777087">
+    <link rel="shortcut icon" href="favicon.ico?v=1625762867407">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico?v=1625762867407">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png?v=1625762867407">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png?v=1625762867407">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png?v=1625762867407">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png?v=1625762867407">
+	<link rel="manifest" href="manifest.json?v=1625762867407">
 	<meta name="msapplication-TileColor" content="#FFFFFF">
 	<meta name="msapplication-config" content="browserconfig.xml">
-	<link rel="preload" href="locale/en.txt?v=1625727777087" as="fetch" crossorigin="anonymous"/>
-	<link rel="preload" href="script.js?v=1625727777087" as="script"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/r/3/0_0.jpg?v=1625727777087" as="image"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/l/3/0_0.jpg?v=1625727777087" as="image"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/u/3/0_0.jpg?v=1625727777087" as="image"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/d/3/0_0.jpg?v=1625727777087" as="image"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/f/3/0_0.jpg?v=1625727777087" as="image"/>
-	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/b/3/0_0.jpg?v=1625727777087" as="image"/>
+	<link rel="preload" href="locale/en.txt?v=1625762867407" as="fetch" crossorigin="anonymous"/>
+	<link rel="preload" href="script.js?v=1625762867407" as="script"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/r/3/0_0.jpg?v=1625762867407" as="image"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/l/3/0_0.jpg?v=1625762867407" as="image"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/u/3/0_0.jpg?v=1625762867407" as="image"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/d/3/0_0.jpg?v=1625762867407" as="image"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/f/3/0_0.jpg?v=1625762867407" as="image"/>
+	<link rel="preload" href="media/panorama_888798B3_84B0_1586_41C0_195191D95BEB_0/b/3/0_0.jpg?v=1625762867407" as="image"/>
 	<meta property="og:title" content="Tinglado Corporativo" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="Terminaciones de primer nivel. Excelente distribución y gran espacio para todo tipo de negocio." />
@@ -31,23 +31,23 @@
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="630" />
 	<meta property="fb:app_id" content="817622095004141" />
-	<link rel="image_src" href="https://tme.paseo.digital/socialThumbnail.jpg?v=1625727777087">
+	<link rel="image_src" href="https://tme.paseo.digital/socialThumbnail.jpg?v=1625762867407">
 	<meta property="og:locale" content="en"/>
 	<meta name="twitter:card" content="summary_large_image"/>
 	<meta name="twitter:title" content="Tinglado Corporativo"/>
 	<meta name="twitter:description" content="Terminaciones de primer nivel. Excelente distribución y gran espacio para todo tipo de negocio."/>
 	<meta name="twitter:url" content="https://tme.paseo.digital/index.htm"/>
-	<meta name="twitter:image:src" content="https://tme.paseo.digital/socialThumbnail.jpg?v=1625727777087"/>
+	<meta name="twitter:image:src" content="https://tme.paseo.digital/socialThumbnail.jpg?v=1625762867407"/>
 	<meta name="twitter:image:width" content="1200"/>
 	<meta name="twitter:image:height" content="630"/>
 	<script>(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");window["ga-disable-UA-116087-3"] = true; ga("create", "UA-116087-3", "auto");ga("send", "event", "start", "url", window.location.href);ga("set", "anonymizeIp", true);</script>
 	<meta name="description" content="Terminaciones de primer nivel. Excelente distribución y gran espacio para todo tipo de negocio."/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1625727777087"></script>
-    <script src="script.js?v=1625727777087"></script>
+    <script src="lib/tdvplayer.js?v=1625762867407"></script>
+    <script src="script.js?v=1625762867407"></script>
     <script type="text/javascript">
         var tour;
-        var devicesUrl = {"general":"script_general.js?v=1625727777087","mobile":"script_mobile.js?v=1625727777087"};
+        var devicesUrl = {"general":"script_general.js?v=1625762867407","mobile":"script_mobile.js?v=1625762867407"};
 
         (function()
         {
@@ -84,9 +84,9 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1625727777087');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1625727777087');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1625727777087');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1625762867407');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1625762867407');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1625762867407');
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -359,10 +359,10 @@
         #viewer { z-index:1; position:absolute; width: 100%; height: 100%; top: 0; }
         #preloadContainer { z-index:2; position:relative; width:100%; height:100%; opacity:0; background-color:rgba(255,255,255,1); transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1625727777087">
+    <link rel="stylesheet" href="fonts.css?v=1625762867407">
 </head>
 <body>
-    <div id="preloadContainer"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_8B032DD6_84E6_192F_41DC_0CBC33FCAA5A.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; bottom: 49.944751381215454%; width: 100.00%; height: 29.06%"></div><div style="z-index: 5; position: absolute; background-image: url('loading/HTMLImage_8A59E84C_84E6_2723_41D9_0D83BA23E7A7.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; bottom: 41.546961325966855%; width: 100.00%; height: 8.95%"></div><div style="z-index: 6; position: absolute; left: 0%; top: 62.486187845303874%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:2.209944751381215vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#000000;font-size:2.21vmin;"><B>INICIAR</B></SPAN></SPAN></DIV></div></div></div>
+    <div id="preloadContainer"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_8B032DD6_84E6_192F_41DC_0CBC33FCAA5A.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; bottom: 49.94%; width: 100.00%; height: 29.06%"></div><div style="z-index: 5; position: absolute; background-image: url('loading/HTMLImage_8A59E84C_84E6_2723_41D9_0D83BA23E7A7.png'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 0%; bottom: 41.55%; width: 100.00%; height: 8.95%"></div><div style="z-index: 6; position: absolute; left: 0%; top: 62.49%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;font-size:2.209944751381215vmin;"><SPAN STYLE="display:inline-block; letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#000000;font-size:2.21vmin;"><B>INICIAR</B></SPAN></SPAN></DIV></div></div></div>
     <div id="viewer"></div>
 </body>
 </html>
